change to 2.3 part A

--- a/lab2/labreport2.tex
+++ b/lab2/labreport2.tex
@@ -283,7 +283,7 @@ For Part B: Like Part A was comparing sounds and created waveforms, so was this 
 
 \subsection{Experiment 2.3: Optoelectrical Signal Sources and Sinks}
 
-For Part A: The photodiode is essentially a tiny solar cell, so it was no surprise when the change in light shining into the diode changed the output voltage. However,the output waveform is very interesting. It looks like a low frequency wave, which we hypothesized to be the diode frequency, encompassing a higher frequency wave, which we hypothesized to be the ambient light frequency.
+For Part A: The photodiode is essentially a tiny solar cell, so it was no surprise when the change in light shining into the diode changed the output voltage. However,the output waveform in AC was a little surprising, but could have been created for a variety of reasons. The first is that the photodiode was only uncovered for a short amount of time, leading to the burst of signal. The other is that the photodiode was instantly exposed to a phone flashlight at close range, which may have caused the diode to attenuate and incorrectly output the value of the light it received.
 
 For Part B: The LED did not light at low voltages, probably because the current flowing through the circuit was not enough to produce a visible light. However, when the light was lit, increasing the voltage provided a clear increase in brightness. The including a square wave with varying frequencies provided interesting information as well, including the threshold at which we could see the flickering of the light, 40 Hz. This value is higher than that of movies, but of course we were much closer to the source and only looking at a single changing light which could have impacted our measurements. 
 
