change to 2.3 part A

--- a/lab2/labreport2.tex
+++ b/lab2/labreport2.tex
@@ -211,7 +211,7 @@ We begin this section by connecting the cathode of the photodiode to pin 14 and 
 	\item Photodiode covered by hand: -17.8 mV
 \end{itemize}
 
-We then set the oscilloscope to measure AC signals from the photodiode. The peak-to-peak amplitude of signal was 2.88 mV and the frequency was 196.83 kHz. The waveform is sinusoidal with periodic spikes in amplitude that occur in tight clumps depicted in \textit{Fig. 6} below. 
+We then set the oscilloscope to measure AC signals from the photodiode. The peak-to-peak amplitude of signal was 2.88 mV and the frequency was 196.83 kHz. The waveform is generally sinusoidal with periodic spikes in amplitude that occur in tight clumps depicted in \textit{Fig. 6} below. 
 \begin{center}
 	\begin{figure} [H]
 		\centering
@@ -295,11 +295,12 @@ For Part C: The waveform is almost what was expected for a square wave, just wit
 \begin{itemize}
 	\item \textit{The vocally produced "A" in Section 2.2 Part B was not a perfect sinusoid of 440 Hz}: This error occurred because 1) an "A" sound can be sung at slightly different pitches and 2) an untrained human voice cannot sing a steady note. Remedy this error by getting a trained vocalist. 
 	\item \textit{Slight Discrepancies in Calculated $R_{OUT}$} For the 20 and 30 Ohm resistors, we strung 10 Ohm resistors in series, which caused the overall resistance to be slightly more than thirty. This explains why our calculated $R_{OUT}$ is slightly lower for these resistors. To remedy this, use more precise resistors. 
+	\item \textit{The strange photodiode AC output in Section 2.3 Part A}: The reasons for possible error were discussed in the conclusion, and could possibly be remedied by avoiding the two issues faced. The differences could be minimized with a slower, and more methodical approach to finding the output signal of the photodiode. 
 \end{itemize}
 
 
 \medskip
 
-%\textit{Note (To be deleted): Briefly list sources of error and discuss how to eliminate or deal with them}
+\
 
 \end{document}
