--- a/lab3/lab3.tex
+++ b/lab3/lab3.tex
@@ -15,7 +15,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[numbered]{matlab-prettifier}
 
-\newcommand{\documentTitle}{Lab 3 --INSERT TITLE}
+\newcommand{\documentTitle}{Lab 3 - Basic Circuits}
 \newcommand{\documentAuthor}{Andrew Pham, Aneel Damaraju}
 \newcommand{\courseTitle}{ELEC 240}
 \newcommand{\testDate}{September 19,2018}
@@ -52,7 +52,7 @@
 
 \section{Objective}
 
-Your text here
+In this lab, we explored Kirchoff's laws, and transfer functions through the use of various circuit elements, such as potentiometers, and software, such as LT Spice
 
 \medskip
 
@@ -86,11 +86,71 @@ Your text here
 
 \section{Results and Discussion}
 
-Your text here
+\subsection{Experiment 3.1: Resistive Voltage Dividers}
+\subsubsection{Part A}
 
-\medskip
+	 The voltage reading on the DMM by a 2$V_{pp}$ sine wave is $.704 V_rms$, or .704 $V_in$. The voltage reading on the DMM for a similar square wave is 1.096 $V_in$. Then, readings were done for various frequencies for the same value sine wave as used in the initial test. The results were as follows
+\begin{itemize} 
+	\item 5 Hz		.641V
+	\item 50 Hz		.701V
+	\item 500 Hz	.701V
+	\item 5 kHz		.49V
+	\item 50 kHz	0V
+\end{itemize}
+	It seems that the appropriate frequency for the DMM is 50-500 Hz to be safe, but more reasonably 10Hz-1kHz.
+\subsubsection{Part B}
+	 The voltage divider ratio should be $\frac{10,(10+10)} = ½ V_in$  for two 10 kOhm Resistors in series. For the sine wave, the output is $.351 V_ac$, which is 49\% of the initial Voltage, consistent with the voltage divider equation 
+	 At 47 Ohms the $V_out = .243$, which is inconsistent, with the voltage divider equation, indicating that the voltmeter may have inconsistent readings at low voltages. 
+	 At 1MOhm the output voltage is .335, indicating that there may be a range of acceptable resistance for the voltmeter, just like we noted an acceptable frequency range.
+\subsubsection{Part C} 
+	Using the same sine wave, but wih 100 Hz, the potentiometer is connected in series and the voltage drop across it is recorded. At the midpoint, $V_out = .386 or .55 V_in$ this value is reasonable within error for such an analog device. 
+	The values of the output voltage at different divisions are given below.
+	\begin{itemize}
+		\item 1 -.76V
+		\item 2 -.653V
+		\item 3 -.589V
+		\item 4 -.506V
+		\item 5 -.389V
+		\item 6 -.273V
+		\item 7 -.181V
+		\item 8 -.076V
+		\item 9 -0.002V
+		\item 10-0.0V
+	\end{itemize}
+ 	It seems as if the values were evenly spaced as if they're were only 9 divisions, since the 9th and 10th both had 0V out.
+\subsection{Experiment 3.2: Filters and Transfer Function}
+\subsection{Part A}
+	Measuring the frequency and the amplitude of the output voltage across an RC circuit. The values recorded can be seen below
+\begin{table}[H]
+\begin{center}
+	\caption{Frequency and the amplitude of the output voltage across an RC circuit}
+	\label{tab: 32A}
+	   \begin{tabular}{l|c|r}
+		\textbf{Frequency} & \textbf{Voltage} & \textbf{Phase shift}\\
+		(Hz) & (V) & (ms) \\
+		\hline
+		20 & .99 & 1.97\\
+		50 & .96 & 1.02\\
+		100 & .88 & .869\\
+		200 & .68 & .632\\
+		500 & .39 & .402\\
+		1k & .16 & .227\\
+		2k & .065 & .119\\
+		5k & .041 & .046\\
+		10k & .021 & .023\\
+		20k & .010 & .012\\
+	\end{tabular}
+\end{center}
+\end{table}
 
-\textit{Note (To be deleted): The heart of your report is the presentation of your results and a discussion of those results. In your discussion, you should not only analyze your results, but also discuss the implications of those results.}
+These results from Table \ref{tab: 32A} were then used plotted onto Figure \ref{fig: 32A5}, using MATLAB. When compared to the values of Figure \ref{fig: 32A6} it can be seen that the experimental results match up with the actual results, confirming the transfer function of AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+
+\subsubsection{Part B}
+
+The screenshot of the LT spice AC analysis of an RC circuit can be seen in figure \ref{simpleRC}, The gain at low frequencies is 0 dB or 1 V/V. The cutoff frequency happens at approx. 250 Hz. At high frequencies the gain rolloff becomes almost linear, with a slope of -1 dB/dec. At low frequencies, the phase is $0\deg$ or in phase. At high frequencies the phase is $-90\deg$. This is because a capacitor will ideally lag in voltage when put in a circuit in series, and at low frequencies the capacitor acts more like a resistor.
+
+After adding the  
+
 
 \section{References}
 
