--- a/lab3/lab3.tex
+++ b/lab3/lab3.tex
@@ -138,8 +138,7 @@ To measure the transfer function at a given frequency, we needed to measure both
 \subsubsection{Part B}
 	 The voltage divider ratio should be $\frac{10}{10+10} = \frac{1}{2} V_{in}$  for two \SI{10}{\kilo\ohm} Resistors in series. For the sine wave, the output is $.351 V_{ac}$, which is 49\% of the initial Voltage, consistent with the voltage divider equation 
 	 At 47 Ohms the $V_{out} = .243$, which is inconsistent, with the voltage divider equation, indicating that the voltmeter may have inconsistent readings at low voltages. 
-	 At 1 MOhms the output voltage is .335, indicating that there may be a range of acceptable resistance for the voltmeter, just like we noted an acceptable frequency range.
-\subsubsection{Part C} 
+	 At 1 MOhms the output voltage is .335, indicating that there may be a range of acceptable resistance for the voltmeter, just like we noted an acceptable frequency range. \\\\
 	Using the same sine wave, but wih 100 Hz, the potentiometer is connected in series and the voltage drop across it is recorded. At the midpoint, $V_{out} = .386 or .55 V_{in}$ this value is reasonable within error for such an analog device. 
 	 The voltage divider ratio should be $\frac{10}{(10+10)}$  for two 10 kOhm Resistors in series. For the sine wave, the output is $.351 V_{AC}$, which is 49\% of the initial Voltage, consistent with the voltage divider equation 
 	 At 47 Ohms the $V_{OUT} = .243$, which is inconsistent, with the voltage divider equation, indicating that the voltmeter may have inconsistent readings at low voltages. 
